Fix #712 Hide .bottom-menu-sidebar on small devices

--- a/resources/assets/sass/partials/_sidebar.scss
+++ b/resources/assets/sass/partials/_sidebar.scss
@@ -131,6 +131,9 @@ body.dashboard {
     @media (min-width: $screen-xs-max) {
         .sidebar {
             width: $sidebar-normal-width;
+            .bottom-menu-sidebar {
+                @extend .hidden-xs;
+            }
         }
 
         .wrapper.toggled .sidebar {
